[package]
name = "heimdallr"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# image = "0.25"
image = { version = "0.25", features = ["png", "default"] }
tiny-skia = "0.11"
fontdue = "0.7"

smithay-client-toolkit = "0.19"
wayland-client = "0.31"
env_logger = "0.11.8"

cairo-rs = { version = "0.18", features = ["use_glib"] }
log = "0.4"
pango = "0.14"
pangocairo = "0.14"

notify = "8"
chrono = "0.4"
shellexpand = "3"
rand = "0.9.2"