[package]
name = "heimdallr"
version = "1.1.2"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.10"
image = { version = "0.25.10", features = ["png", "default"] }
tiny-skia = "0.11"
fontdue = "0.7"

smithay-client-toolkit = "0.19"
wayland-client = "0.31.14"
env_logger = "0.11.10"

cairo-rs = { version = "0.18", features = ["use_glib"] }
log = "0.4"
pango = "0.18"
pangocairo = "0.18"

notify = "8"
chrono = "0.4.44"
shellexpand = "3.1.2"
rand = "0.9.2"
zbus = "3"
futures = "0.3.32"
libc = "0.2.186"
signal-hook = "0.4.4"

clap = { version = "4.6.1", features = ["derive", "cargo"] }
colored = "3.1.1"
glob = "0.3.3"
